testsuite/tests/contrib/lkt_semantic/abstract_fun/test.lkt
class A {
    fun f_ok1(): Int = 0
    @abstract fun f_ok2(): Int
    @builtin fun f_ok3(): Int
    @external fun f_ok4(): Int

    @invalid fun f_error1(): Int
    @invalid @abstract fun f_error2(): Int = 0
    @invalid @builtin fun f_error3(): Int = 0
    @invalid @external fun f_error3(): Int = 0
}
